# firstETLProject

./: Dockerfile  README.md  csv_to_postgres.py  docker-compose.yaml  docker-compose.yml  init.sql  pyproject.toml  retrieve_datasets.py  sample_code.py  sample_data.parquet
dags/: csv_to_postgres.py  etl_dag.py
