[tool.poetry]
name = "firstetlproject"
version = "0.1.0"
description = ""
authors = ["ameeraazli <wanazliwanameera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
